@@ -314,6 +314,11 @@ var dokuBase = location.host + DOKU_BASE;
 jQuery(document).ready(function(){
 
     $dokuWiki = jQuery('.dokuwiki');
+     jQuery('.editbutton_table button').click(function() {
+           var f = this.form;
+           jQuery('<input />').attr('type','hidden').attr('name','mode').attr('value','dwiki').appendTo(jQuery(f));
+            jQuery('<input />').attr('type','hidden').attr('name','fck_preview_mode').attr('value','nil').appendTo(jQuery(f));
+    });  
   
     if(typeof(JSINFO['dbl_click_auth'] !== 'undefined') && JSINFO['dbl_click_auth'] == "") return;  
     if(!JSINFO['ckg_dbl_click']) return;
